Initial setup of work requests and controller, added some searching capability

--- a/src/main/resources/templates/workRequest/add.html
+++ b/src/main/resources/templates/workRequest/add.html
@@ -21,6 +21,8 @@
         <input class="form-control" th:field="*{building}" />
         <span th:errors="*{building}" class="error"></span>
     </div>
+
+    <input type="submit" value="Add" />
 </form>
 
 </body>
