--- a/src/main/resources/templates/workRequest/index.html
+++ b/src/main/resources/templates/workRequest/index.html
@@ -3,6 +3,24 @@
 <head th:replace="fragments :: head"></head>
 
 <body class="container">
+    <!--This was when I was trying to use DataTables plugin, not so easy -->
+    <!--<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.css" />
+    <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.js"></script>
+    <script>
+        $(document).ready( function () {
+
+            var data = workRequests
+
+            $('#workRequestTable').DataTable({
+                data: data,
+                columns: [
+                    {data: 'description'},
+                    {data: 'building'}
+                ],
+                ordering: true
+            });
+        } );
+    </script>-->
 
 <h1 th:text="${title}">Default Title</h1>
 
@@ -11,6 +29,46 @@
 <br />
 
 <p>This page will be a search page through all work requests.</p>
+
+<div>
+    <form method="post" th:object="${searchForm}">
+        <h2>Search by:</h2>
+
+        <ul class="form-group">
+            <li th:each="field : *{fields}" style="list-style-type:none;display:inline-block;padding-right:5px;padding-left:5px;">
+                <input type="radio" th:field="*{searchField}" th:value="${field}" th:checked="${field == searchField}"/>
+                <label th:for="${#ids.prev('searchField')}" th:text="${field.name}"></label>
+            </li>
+        </ul>
+
+        <div class="form-group">
+            <label th:for="keyword">Keyword</label>
+            <input class="form-control" th:field="*{keyword}" />
+        </div>
+
+        <input type="submit" value="Search" />
+    </form>
+</div>
+
+<br/>
+<div>
+    <table id="workRequestTable" class="table table-striped">
+        <thead>
+            <tr>
+                <th>Number</th>
+                <th>Description</th>
+                <th>Building</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr th:each="workRequest : ${workRequests}">
+                <td th:text="${workRequest.id}"></td>
+                <td th:text="${workRequest.description}"></td>
+                <td th:text="${workRequest.building}"></td>
+            </tr>
+        </tbody>
+    </table>
+</div>
 
 </body>
 </html>
