Added buildingcontroller and connected to workrequests in one to many relationship

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -12,8 +12,9 @@
 <body>
 
 <nav th:fragment="navigation">
-    <a th:href="@{/workrequest}">Home</a> |
-    <a th:href="@{/workrequest/add}">Add</a> |
+    <a th:href="@{/workrequest}">Work Requests</a> |
+    <a th:href="@{/workrequest/add}">New Work Request</a> |
+    <a th:href="@{/buildings}">Buildings</a> |
     <a>Make Some More Tabs Here!</a>
 </nav>
 
