--- a/src/main/resources/templates/workRequest/add.html
+++ b/src/main/resources/templates/workRequest/add.html
@@ -18,7 +18,11 @@
     </div>
     <div class="form-group">
         <label th:for="building">Building</label>
-        <input class="form-control" th:field="*{building}" />
+        <select name="buildingId">
+            <option th:each="building : ${buildings}"
+                    th:text="${building.name}"
+                    th:value="${building.id}"></option>
+        </select>
         <span th:errors="*{building}" class="error"></span>
     </div>
 
