--- a/src/main/resources/templates/buildings/add.html
+++ b/src/main/resources/templates/buildings/add.html
@@ -17,9 +17,9 @@
         <span th:errors="*{name}" class="error"></span>
     </div>
     <div class="form-group">
-        <label th:for="age">Age</label>
-        <input class="form-control" th:field="*{age}" />
-        <span th:errors="*{age}" class="error"></span>
+        <label th:for="yearBuilt">Year Built</label>
+        <input class="form-control" th:field="*{yearBuilt}" />
+        <span th:errors="*{yearBuilt}" class="error"></span>
     </div>
 
     <input type="submit" value="Add" />
