Added date/time stamp to work requests, make a few other minor view changes.

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -14,8 +14,7 @@
 <nav th:fragment="navigation">
     <a th:href="@{/workrequest}">Work Requests</a> |
     <a th:href="@{/workrequest/add}">New Work Request</a> |
-    <a th:href="@{/buildings}">Buildings</a> |
-    <a>Make Some More Tabs Here!</a>
+    <a th:href="@{/buildings}">Buildings</a>
 </nav>
 
 </body>
