--- a/src/main/resources/templates/workRequest/add.html
+++ b/src/main/resources/templates/workRequest/add.html
@@ -4,12 +4,14 @@
 
 <body class="container">
 
-<h1 th:text="${title}">Default Title</h1>
 
 <nav th:replace="fragments :: navigation"></nav>
 
+<h1 th:text="${title}">Default Title</h1>
+
 <br />
 
+<div>
 <form method="post" style="max-width:600px;" th:object="${workRequest}">
     <div class="form-group">
         <label th:for="dateRequested">Date Requested</label>
@@ -43,6 +45,7 @@
 
     <input type="submit" value="Add" />
 </form>
+</div>
 
 </body>
 </html>
