--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -16,7 +16,7 @@
 <div id="wrapper" class="animate"  th:fragment="navigation">
     <nav class="navbar header-top fixed-top navbar-expand-lg navbar-dark bg-dark" >
         <span class="navbar-toggler-icon leftmenutrigger"></span>
-        <a class="navbar-brand" href="#">Manager</a>
+        <a class="navbar-brand" href="#">WRAAM</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText"
                 aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
