--- a/src/main/resources/static/css/custom.css
+++ b/src/main/resources/static/css/custom.css
@@ -22,6 +22,15 @@ box-shadow: 0 3px 5px rgba(0,0,0,.1)
 
 .leftmenutrigger{display: none}
 
+hr {
+    display: block;
+    height: 1px;
+    border: 0;
+    border-top: 1px solid #ccc;
+    margin: 1em 0;
+    padding: 0;
+}
+
 @media(min-width:992px) {
     .leftmenutrigger{
         display: block;display:
