--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -37,12 +37,15 @@
                     <a class="nav-link" th:href="@{/buildings/add}">New Building</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">New User</a>
+                    <a class="nav-link" th:href="@{/login}">Log In</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/register}">Register</a>
                 </li>
             </ul>
             <ul class="navbar-nav ml-md-auto d-md-flex">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">
+                    <a class="nav-link" href="/logout">
                         <i class="fas fa-sign-out-alt"></i>
                     </a>
                 </li>
