--- a/src/main/resources/templates/user/register.html
+++ b/src/main/resources/templates/user/register.html
@@ -5,33 +5,40 @@
 <body class="container">
 
 
+<div class="mx-auto" style="margin-top: 25px;">
+    <div class="row">
+        <div class="col-3">
 
-<h1 th:text="${title}">Default Title</h1>
-
-<br />
-
-<div>
-    <form method="post" style="max-width:600px;" th:object="${registerForm}">
-        <div class="form-group">
-            <label th:for="username">Username</label>
-            <input class="form-control" th:field="*{username}" />
-            <span th:errors="*{username}" class="error"></span>
         </div>
-        <div class="form-group">
-            <label th:for="password">Password</label>
-            <input class="form-control" th:field="*{password}" type="password"/>
-            <span th:errors="*{password}" class="error"></span>
-        </div>
-        <div class="form-group">
-            <label th:for="verifyPassword">Verify Password</label>
-            <input class="form-control" th:field="*{verifyPassword}" type="password"/>
-            <span th:errors="*{verifyPassword}" class="error"></span>
-        </div>
+        <div class="col-6">
+        <h1 th:text="${title}">Default Title</h1>
+
+        <br />
+
+        <div>
+            <form method="post" style="max-width:600px;" th:object="${registerForm}">
+                <div class="form-group">
+                    <label th:for="username">Username</label>
+                    <input class="form-control" th:field="*{username}" />
+                    <span th:errors="*{username}" class="error"></span>
+                </div>
+                <div class="form-group">
+                    <label th:for="password">Password</label>
+                    <input class="form-control" th:field="*{password}" type="password"/>
+                    <span th:errors="*{password}" class="error"></span>
+                </div>
+                <div class="form-group">
+                    <label th:for="verifyPassword">Verify Password</label>
+                    <input class="form-control" th:field="*{verifyPassword}" type="password"/>
+                    <span th:errors="*{verifyPassword}" class="error"></span>
+                </div>
 
 
-        <input type="submit" value="Register" />
-    </form>
+                <input type="submit" value="Register" />
+            </form>
+        </div>
+        </div>
+    </div>
 </div>
-
 </body>
 </html>
