Fixed copyright issue with image

--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -19,8 +19,8 @@
         <div class="col-2">
 
         </div>
-        <div class="col-3">
-            <img src="/../images/mengerSponge.png" />
+        <div class="col-3" style="padding-left: 20px; padding-right: 20px;">
+            <img src="/../images/thueNonrepetitiveSequence.png"  class="img-fluid"/>
         </div>
         <div class="col-6">
             <form method="post" style="max-width:600px;" th:object="${loginForm}">
