Fixed issue with application.properties showing

--- a/src/main/resources/templates/user/register.html
+++ b/src/main/resources/templates/user/register.html
@@ -36,6 +36,7 @@
 
                 <input type="submit" value="Register" />
             </form>
+            <a th:href="@{/login}">Log In</a>
         </div>
         </div>
     </div>
