--- a/src/main/resources/static/css/custom.css
+++ b/src/main/resources/static/css/custom.css
@@ -6,6 +6,16 @@ background:#f9f9f9;
 padding:90px 15px;
 }
 
+.navbar-welcome{
+display:inline-block;
+padding-top:.3125rem;
+padding-bottom:.3125rem;
+margin-right:1rem;
+font-size:1rem;
+line-height:inherit;
+white-space:nowrap;
+}
+
 .navbar-expand-lg .navbar-nav.side-nav{
 flex-direction: column;
 }
