--- a/src/main/resources/templates/workRequest/add.html
+++ b/src/main/resources/templates/workRequest/add.html
@@ -12,7 +12,7 @@
 <br />
 
 <div>
-<form method="post" style="max-width:600px;" th:object="${workRequest}">
+<form method="post" style="max-width:600px;" th:object="${workRequestForm}">
     <div class="form-group">
         <label th:for="description">Description</label>
         <input class="form-control" th:field="*{description}" />
@@ -35,7 +35,7 @@
                     th:text="${building.name}"
                     th:value="${building.id}"></option>
         </select>
-        <span th:errors="*{building}" class="error"></span>
+        <span th:text="${selectBuildingError}" class="error"></span>
     </div>
 
     <input type="submit" value="Save" />
